Added PHP AJAX with Jquery

--- a/register.html
+++ b/register.html
@@ -40,24 +40,26 @@
 			<h2> Online Project Diary</h2>
 			<hr>
 
-			<input class="form-control" type="text" id="rollno" name="username" placeholder="Roll No">
+			<input class="form-control" type="text" id="rollno" name="rollno" placeholder="Roll No">
 			<br>
-			<input class="form-control" type="password" id="pwd" name="pwd" placeholder="Password">
+			<input class="form-control" type="text" id="fullname" name="fullname" placeholder="Full Name">
+			<br>
+			<!-- <input class="form-control" type="password" id="pwd" name="pwd" placeholder="Password">
 			
 			<input class="form-control" type="password" id="repwd" name="repwd" placeholder="Re type Password">
-			
+			 -->
 			<select class="form-control" id="class" name="class">
 				<option value="">Select your Class</option>
-				<option value="SECO">SE Computer</option>
-				<option value="TECO">TE Computer</option>
-				<option value="BECO">BE Computer</option>
+				<option value="SECO">SECO</option>
+				<option value="TECO">TECO</option>
+				<option value="BECO">BECO</option>
 			</select>
 			
 			<br>
 			<input type="text" id="mobile" name="mobile" class="form-control" placeholder="Mobile No" >
 			<br>
 			<input id="email" type="email" name="email" class="form-control" placeholder="Email" >
-			
+			<br>
 			<!--
 			<br>
 			<label for="male">Gender :  Male </label>
@@ -84,11 +86,12 @@
 			
 			<label for="desktop">Desktop</label>
 			<input type="checkbox" placeholder="Your Address" id="desktop" name="desktop">
-			<br>-->
+			<br>
 			
 			<label>Upload Photo</label>
 			<input type="file" placeholder="" class="form-control" name="Profile">
-						
+			-->
+
 			<input type="submit" class="btn btn-success btn-block btn-flat" name="btnRegister" id="submit-btn" value="Register">
 		</form>
 		
